页面css样式部分小的调整

--- a/brand1/html/editBrand.html
+++ b/brand1/html/editBrand.html
@@ -65,7 +65,9 @@
                         <div class="pure-u-1-4">
                             <input type="text"  class="form-control"  placeholder="数字">
                         </div>
-                        <span class="errorInfo_validate">这里是错误提示信息</span>
+                        <div class="errorInfo_validate">
+                            <span >这里是错误提示信息</span>
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -201,6 +203,21 @@
                                             <span class="pull-right">价格</span>
                                         </li>
                                         <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
                                     </ul>
                                 </div>
                             </div>
@@ -216,7 +233,7 @@
                     <div class="service_choose_layout" style="margin-left: 0;">
                         <div class="title">已选服务</div>
                         <div class="service_choose" style="margin-top: 0px">
-                            <div class="choose_box choose_box_right" style="width: 210px">
+                            <div class="choose_box choose_box_right" style="width: 230px">
                                 <div class="choose_box_title">
                                     <span class="text-info">服务详细</span>
                                 </div>
@@ -227,6 +244,21 @@
                                            <span class="serviceType">F</span>
                                            <span style="padding-left: 3px">&times;</span>
                                         </li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
+                                        <li class="choose4li">1</li>
                                         <li class="choose4li">1</li>
                                     </ul>
                                 </div>
