choose2的价格不显示，页面小浮调整

--- a/brand1/html/editBrand.html
+++ b/brand1/html/editBrand.html
@@ -189,7 +189,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="choose_box choose_box_right" style="width: 310px">
+                            <div class="choose_box choose_box_right" style="width: 280px">
                                 <div class="choose_box_title">
                                     <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
                                 </div>
@@ -200,7 +200,8 @@
                                             <span class="commercialName">UPTO50LB 23KG AND62LI 158LCM</span>
                                             <span class="serviceType">F</span>
                                             <span class="ssrCode">0B5E</span>
-                                            <span class="pull-right">价格</span>
+                                            <!--
+                                            <span class="pull-right">价格</span-->
                                         </li>
                                         <li class="choose4li">1</li>
                                         <li class="choose4li">1</li>
@@ -275,6 +276,7 @@
         </div>
     </form>
 </div>
+
 
 <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
