--- a/ocmoni6/html/datasourceQuery.html
+++ b/ocmoni6/html/datasourceQuery.html
@@ -64,10 +64,10 @@
 
                 <label class="marginR5">生效日期</label>
                 <input type="text" class="common_input datepicker"  placeholder="范围" style="width: 100px">
-                <span class="glyphicon glyphicon-calendar iconfont_box"></span>
+                <label class="glyphicon glyphicon-calendar iconfont_box"></label>
                 <span>—</span>
                 <input type="text" class="common_input datepicker"  placeholder="范围" style="width: 100px">
-                <span class="glyphicon glyphicon-th iconfont_box"></span>
+                <label class="glyphicon glyphicon-th iconfont_box"></label>
 
 
                 <label class="marginR5">数据源</label>
