--- a/demo1/selectize3.html
+++ b/demo1/selectize3.html
@@ -2,13 +2,13 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>测试默认选中，和disabled功能</title>
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css"/>
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.bootstrap3.css"/>
     <link rel="stylesheet" href="../bower_components/selectize/dist/css/selectize.css"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container" style="padding-top: 50px;">
         <div style="width: 100%;height: 50px;">
             <select id="select-links">
             </select>
