update style css

--- a/demo1/selectize3.html
+++ b/demo1/selectize3.html
@@ -34,6 +34,7 @@
 <script type="text/javascript">
     $(function(){
         var handleChangeSelect = function(val) {
+            console.info(arguments) ;
             console.log("val : " + val);
         };
         var options = [] ;
