--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -70,65 +70,74 @@
 <div class="container-fluid main_content">
     <form class="form-horizontal">
         <div class="data_section">
-            <div class="title_layout">
-                <span class="left">1.选择附加服务</span>
-                <span style="margin-right:40px;"></span>
-                <span class="serviceInputSpan"></span>
-                <i class ="glyphicon glyphicon-asterisk red"></i>
-                <span class ="gray">必须选择到最后一级</span>
+            <div class="title_layout" style="height: 50px;line-height: 50px">
+                <span class="left" style ="width:9%;">1.选择附加服务</span>
+                <div style="width: 57%;" class="serviceInputSpanContainer">
+                    <span class="serviceInputSpan">优选座位组描述F</span>
+                </div>
+			        <span style="width: 20%;display: inline-block;">
+			        	<i class ="glyphicon glyphicon-asterisk red"></i>
+	               		<span class ="gray">必须选择到最后一级</span>
+			        </span>
+                <span class ="discountBtn">新版</span>
+                <span class ="discountBtn discountCheck">旧版</span>
             </div>
+
             <div class="content_layout">
-                <!-- 附加服务选择框 start-->
-                <div class="service_choose_layout">
-                    <s><i></i></s>
-                    <div class="service_choose">
-                        <div class="choose_box">
-                            <div class="choose_box_title">
-                                <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                <span class="left">&nbsp;</span>
+                <div class="right2">
+                    <!-- 附加服务选择框 start-->
+                    <div class="service_choose_layout">
+                        <s><i></i></s>
+                        <div class="service_choose">
+                            <div class="choose_box">
+                                <div class="choose_box_title">
+                                    <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                                </div>
+                                <div class="service_list">
+                                    <ul>
+                                        <li>优选座位组描述F</li>
+                                        <li>1</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="service_list">
-                                <ul>
-                                    <li>优选座位组描述F</li>
-                                    <li>1</li>
-                                </ul>
+                            <div class="choose_box choose_box_right">
+                                <div class="choose_box_title">
+                                    <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                                </div>
+                                <div class="service_list">
+                                    <ul>
+                                        <li>优选座位组描述F</li>
+                                        <li>1</li>
+                                    </ul>
+                                </div>
                             </div>
-                        </div>
-                        <div class="choose_box choose_box_right">
-                            <div class="choose_box_title">
-                                <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                            <div class="choose_box choose_box_right">
+                                <div class="choose_box_title">
+                                    <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
+                                </div>
+                                <div class="service_list">
+                                    <ul>
+                                        <li>优选座位组描述F</li>
+                                        <li>1</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="service_list">
-                                <ul>
-                                    <li>优选座位组描述F</li>
-                                    <li>1</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="choose_box choose_box_right">
-                            <div class="choose_box_title">
-                                <input type="text" class="form-control input-sm"  placeholder="选择服务分组" />
-                            </div>
-                            <div class="service_list">
-                                <ul>
-                                    <li>优选座位组描述F</li>
-                                    <li>1</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="choose_box choose_box_right">
-                            <div class="choose_box_title">
-                                <span class="text-info">服务详细</span>
-                            </div>
-                            <div class="service_list">
-                                <ul>
-                                    <li>优选座位组描述F</li>
-                                    <li>1</li>
-                                </ul>
+                            <div class="choose_box choose_box_right">
+                                <div class="choose_box_title">
+                                    <span class="text-info">服务详细</span>
+                                </div>
+                                <div class="service_list">
+                                    <ul>
+                                        <li>优选座位组描述F</li>
+                                        <li>1</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <!-- 附加服务选择框 end-->
                 </div>
-                <!-- 附加服务选择框 end-->
             </div>
         </div>
 
