--- a/brand1/html/editBrandGroup.html
+++ b/brand1/html/editBrandGroup.html
@@ -142,7 +142,9 @@
             </div>
             <!--必填项 end-->
 
-            <!--必填项 strart-->
+
+
+            <!--选填项 strart-->
             <div class="content_layout">
                 <span class="left">选填项</span>
                 <div class="right">
@@ -203,7 +205,8 @@
                     </div>
                 </div>-->
             </div>
-            <!--必填项 end-->
+            <!--选填项 end-->
+
         </div>
     </form>
 </div>
