--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -118,19 +118,30 @@
                                 </div>
                                 <div class="service_list">
                                     <ul>
-                                        <li>优选座位组描述F</li>
-                                        <li>1</li>
+                                        <li class="choose4li">
+                                            <span class="choose_li_span choose_service_name"> 优选座位组描述F优选座位组描述F</span>
+                                            <span class="choose_li_span serviceTypeSpan">F</span>
+                                            <span class="choose_li_span">x5</span>
+                                        </li>
+                                        <li class="choose4li">1</li>
                                     </ul>
                                 </div>
                             </div>
-                            <div class="choose_box choose_box_right">
+                            <div class="choose_box choose_box_right" style="width: 250px;">
                                 <div class="choose_box_title">
                                     <span class="text-info">服务详细</span>
                                 </div>
                                 <div class="service_list">
                                     <ul>
-                                        <li>优选座位组描述F</li>
-                                        <li>1</li>
+                                        <li class="choose4li">
+                                            <span class="choose_li_span choose_service_name"> 优选座位组描述F优选座位组描述F</span>
+                                            <span class="choose_li_span serviceTypeSpan">F</span>
+                                            <span class ="choose_li_span pull-right oper_item marginR5 hover_show">
+											    <span class="glyphicon glyphicon-remove myhand" ng-click="deleteS5(l)"></span>
+											    <span class="glyphicon glyphicon-pencil myhand marginL5" ng-click="editS5(l)"></span>
+										    </span>
+                                        </li>
+                                        <li class="choose4li">1</li>
                                     </ul>
                                 </div>
                             </div>
