--- a/ocmoni6/html/s7Edit.html
+++ b/ocmoni6/html/s7Edit.html
@@ -73,7 +73,7 @@
             <div class="title_layout" style="height: 50px;line-height: 50px">
                 <span class="left" style ="width:9%;">1.选择附加服务</span>
                 <div style="width: 57%;" class="serviceInputSpanContainer">
-                    <span class="serviceInputSpan">优选座位组描述F</span>
+                    <span class="serviceInputSpan">优选座位组描述F<span class="marginL5 serviceTypeSpan">F</span></span>
                 </div>
 			        <span style="width: 20%;display: inline-block;">
 			        	<i class ="glyphicon glyphicon-asterisk red"></i>
