--- a/ocmoni6_1/html/s7Query.html
+++ b/ocmoni6_1/html/s7Query.html
@@ -163,11 +163,11 @@
                     <th width="7%">&nbsp;&nbsp;&nbsp;&nbsp;旅行<br/>结束日期</th>
                     <th width="5%">区域1</th>
                     <th width="5%">区域2</th>
-                    <th width="6%">常客等级</th>
+                    <th width="6%">常客<br/>等级</th>
                     <th width="6%">金额</th>
                     <th width="10%">描述</th>
                     <th width="6%">&nbsp;&nbsp;最后<br/>更新人</th>
-                    <th width="10%">最后更新日期</th>
+                    <th width="11%">最后更新日期</th>
                     <th width="5%">操作</th>
                 </tr>
             </thead>
