--- a/ocmoni6_1/html/s7Query.html
+++ b/ocmoni6_1/html/s7Query.html
@@ -51,6 +51,9 @@
             vertical-align: middle;
             margin: 0px;
         }
+        .table_records7 tbody tr:hover{
+            background-color:#ECF1EF ;
+        }
     </style>
 </head>
 <body>
