file name adjust

--- a/ocmoni6_1/html/index.html
+++ b/ocmoni6_1/html/index.html
@@ -8,53 +8,7 @@
     <link rel="stylesheet" href="../styles/css/jquery-ui-timepicker-addon.css"/>
     <link rel="stylesheet" href="../styles/css/common.css">
     <link rel="stylesheet" href="../styles/css/oc_query.css"/>
-    <style type="text/css">
-        .table_records7 .descr{
-            display: inline-block;
-            width: 100px;
-            overflow: hidden;
-            text-overflow:ellipsis;
-            white-space: nowrap;
-        }
-        .table_records7 .relative{
-            position: relative;
-        }
-        .table_records7 .tb_order{
-            position: absolute;
-            right: 2px;
-            top: 36%;
-        }
-        .table_records7 .tbtitle{
-            display: block;
-        }
-        @media screen and (min-width: 1250px) {
-            .table_records7 .tbtitle{
-                display: inline-block;
-            }
-            .table_records7 .tb_order{
-                top: 30%;
-            }
-        }
-
-        table.table_records7 tr th{
-            padding: 8px 2px;
-            background-color: #8AD0EE;
-            vertical-align: middle;
-        }
-        table.table_records7 tr td{
-            padding: 4px 2px;
-        }
-        table.table_records7 tr td{
-            padding-bottom: 0px;
-        }
-        table.table_records7 input[type="checkbox"]{
-            vertical-align: middle;
-            margin: 0px;
-        }
-        .table_records7 tbody tr:hover{
-            background-color:#ECF1EF ;
-        }
-    </style>
+    <link rel="stylesheet" href="./index.css"/>
 </head>
 <body>
 
@@ -258,6 +212,6 @@
 <script type="text/javascript" src="../lib/jq-timepicker/jquery-timepicker-addon.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../bower_components/underscore/underscore.js"></script>
-<script type="text/javascript" src="../js/s7Query.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
