--- a/ocmoni6_1/html/index_bac.html
+++ b/ocmoni6_1/html/index_bac.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="../styles/css/oc_query.css"/>
     <link rel="stylesheet" href="./index.css"/>
 </head>
-<body id ="app">
+<body>
 
 <div class="navbar-fixed-top" id = "myheader">
 </div>
-
 
 <div class="container-fluid main_content" id="main_content" >
     <div class="pull-right clearfix" style="margin-bottom: 8px">
@@ -41,151 +40,63 @@
                         <span class="tbtitle">全选 </span>
                         <input type="checkbox">
                     </th>
-                    <th width="6%" class="relative" 
-                        v-on:click="clickTableTitle('subcode')"
-                        
-                        >
-                        <span class="tbtitle">sub</span>code
-                            <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.subcode,
-                            'glyphicon-chevron-up': !tableTitleOrder.subcode }" 
-                            ></i>
+                    <th width="6%" class="relative">
+                        <span class="tbtitle">sub</span>code<i class="glyphicon glyphicon-chevron-down tb_order"></i>
                     </th>
-                    <th width="6%" class="relative" v-on:click="clickTableTitle('serviceType')">
-                        <span class="tbtitle">服务</span>类型 
-                            <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.serviceType,
-                            'glyphicon-chevron-up': !tableTitleOrder.serviceType }" 
-                        ></i>
-                    </th>
-                    <th width="5%" class="relative" v-on:click="clickTableTitle('status')">
-                        状态  <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.status,
-                            'glyphicon-chevron-up': !tableTitleOrder.status }" 
-                            ></i>
-                    </th>
-                    <th width="7%" class="relative" v-on:click="clickTableTitle('saleStartDate')">
-                       <span class="tbtitle">销售起</span>始日期
-                        <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.saleStartDate,
-                            'glyphicon-chevron-up': !tableTitleOrder.saleStartDate }" 
-                            ></i>
-                    </th>
-                    <th width="7%" class="relative" v-on:click="clickTableTitle('saleEndDate')">
-                        <span class="tbtitle">销售截</span>止日期
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.saleEndDate,
-                            'glyphicon-chevron-up': !tableTitleOrder.saleEndDate }" 
-                            ></i>
-                    </th>
-                    <th width="7%" class="relative" v-on:click="clickTableTitle('travelStartDate')">
-                        <span class="tbtitle">旅行开</span>始日期
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.travelStartDate,
-                            'glyphicon-chevron-up': !tableTitleOrder.travelStartDate }" 
-                            ></i>
-                    </th>
-                    <th width="7%" class="relative" v-on:click="clickTableTitle('travelEndDate')">
-                        <span class="tbtitle">旅行结</span>束日期
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.travelEndDate,
-                            'glyphicon-chevron-up': !tableTitleOrder.travelEndDate }" 
-                            ></i>
-                    </th>
-                    <th width="5%" class="relative" v-on:click="clickTableTitle('loc1')">
-                        区域1 
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.loc1,
-                            'glyphicon-chevron-up': !tableTitleOrder.loc1 }" 
-                            ></i>
-                    </th>
-                    <th width="5%" class="relative" v-on:click="clickTableTitle('loc2')">
-                        区域2 
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.loc2,
-                            'glyphicon-chevron-up': !tableTitleOrder.loc2 }" 
-                            ></i>
-                    </th>
-                    <th width="6%" class="relative" v-on:click="clickTableTitle('flyerStatus')">
-                        <span class="tbtitle">常客</span>等级 
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.flyerStatus,
-                            'glyphicon-chevron-up': !tableTitleOrder.flyerStatus }" 
-                            ></i>
-                    </th>
-                    <th width="6%" class="relative" v-on:click="clickTableTitle('money')">
-                        金额  <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.money,
-                            'glyphicon-chevron-up': !tableTitleOrder.money }" 
-                            ></i>
-                    </th>
-                    <th width="9%" class="relative" v-on:click="clickTableTitle('descr')">
-                        描述  <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.descr,
-                            'glyphicon-chevron-up': !tableTitleOrder.descr }" 
-                            ></i>
-                    </th>
-                    <th width="6%" class="relative" v-on:click="clickTableTitle('lastUpdateUser')">
-                        <span class="tbtitle">最后</span>更新人 
-                         <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.lastUpdateUser,
-                            'glyphicon-chevron-up': !tableTitleOrder.lastUpdateUser }" 
-                            ></i>
-                    </th>
-                    <th width="10%" class="relative" v-on:click="clickTableTitle('lastUpdateDate')">
-                        最后更新日期  <i v-bind:class="{ 
-                            'glyphicon tb_order': true, 
-                            'glyphicon-chevron-down': tableTitleOrder.lastUpdateDate,
-                            'glyphicon-chevron-up': !tableTitleOrder.lastUpdateDate }" 
-                            ></i>
-                    </th>
+                    <th width="6%" class="relative"><span class="tbtitle">服务</span>类型 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="5%" class="relative">状态 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="7%" class="relative">
+                       <span class="tbtitle">销售起</span>始日期<i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="7%" class="relative"><span class="tbtitle">销售截</span>止日期<i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="7%" class="relative"><span class="tbtitle">旅行开</span>始日期<i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="7%" class="relative"><span class="tbtitle">旅行结</span>束日期<i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="5%" class="relative">区域1 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="5%" class="relative">区域2 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="6%" class="relative"><span class="tbtitle">常客</span>等级 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="6%" class="relative">金额 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="9%" class="relative">描述 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="6%" class="relative"><span class="tbtitle">最后</span>更新人 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
+                    <th width="10%" class="relative">最后更新日期 <i class="glyphicon glyphicon-chevron-down tb_order"></i></th>
                     <th width="4%" >操作</th>
                 </tr>
             </thead>
-            <tbody>
-                 <tr v-for="item in records7List">
-                    <td><input type="checkbox" /></td>
-                    <td>OB5</td>
-                    <td>F</td>
-                    <td>未发布</td>
-                    <td>2016/01/01</td>
-                    <td>2016/12/31</td>
-                    <td>2016/01/01</td>
-                    <td>2016/12/31</td>
-                    <td>12345678</td>
-                    <td>111</td>
-                    <td>白金卡</td>
-                    <td>9999CNY</td>
-                    <td>
-                    <span class="descr" title="描述测试测试的的测试测试测试描述测试测试的的测试测试测试">描述测试测试的的测试测试测试</span>
-                    </td>
-                    <td>yicj</td>
-                    <td>2016/01/01 14:00</td>
-                    <td>
-                        <i class="glyphicon glyphicon-pencil"></i>
-                        <i class="glyphicon glyphicon-trash"></i>
-                    </td>
-                 </tr>
+            <tbody id ="list_s7_container">
+
             </tbody>
         </table>
     </div>
+
 </div>
 
 
 <script type="text/template"  id ="mytemplate">
+    <tr>
+        <td><input type="checkbox" /></td>
+        <td>OB5</td>
+        <td>F</td>
+        <td>未发布</td>
+        <td>2016/01/01</td>
+        <td>2016/12/31</td>
+        <td>2016/01/01</td>
+        <td>2016/12/31</td>
+        <td>123</td>
+        <td>111</td>
+        <td>白金卡</td>
+        <td>9999CNY</td>
+        <td>
+           <span class="descr" title="描述测试测试的的测试测试测试描述测试测试的的测试测试测试">描述测试测试的的测试测试测试</span>
+        </td>
+        <td>yicj</td>
+        <td>2016/01/01 14:00</td>
+        <td>
+            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-trash"></i>
+        </td>
+    </tr>
+</script>
+
+
+<script type="text/template"  id ="mytemplate2">
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -301,7 +212,6 @@
 <script type="text/javascript" src="../lib/jq-timepicker/jquery-timepicker-addon.js"></script>
 <script type="text/javascript" src="../../bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script type="text/javascript" src="../../bower_components/underscore/underscore.js"></script>
-<script type="text/javascript" src="../../bower_components/vue/dist/vue.js"></script>
 <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
